# sfmltest

./: .gitignore  CMakeLists.txt
src/: main.cpp  sfml.cpp  sfml.h
